--- a/quasar/src/css/app.sass
+++ b/quasar/src/css/app.sass
@@ -3,3 +3,8 @@
   width: 100%
   max-width: 600px
 
+@import "https://fonts.googleapis.com/css2?family=Montserrat:wght@200..700"
+
+.logo-typography
+  font-family: 'Montserrat', 'Roboto', sans-serif
+  font-weight: 600
